--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
 #c {
+    position: absolute;
     top: 0 px;
     left: 0 px;
     border: solid black 1px;
     margin: 0px;
+    padding: 0px;
     position: absolute;
   }
