--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 #c {
     position: absolute;
-    top: 0 px;
-    left: 0 px;
+    top: 0;
+    left: 0;
     border: solid black 1px;
-    margin: 0px;
-    padding: 0px;
+    margin: 0;
+    padding: 0;
     position: absolute;
   }
