--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@
     position: absolute;
     top: 0;
     left: 0;
+    bottom: 0;
+    right: 0;
     border: solid black 1px;
     margin: 0;
     padding: 0;
