--- a/style.css
+++ b/style.css
@@ -1,11 +1,10 @@
+html, body {
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+}
+
 #c {
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    border: solid black 1px;
-    margin: 0;
-    padding: 0;
-    position: absolute;
+  width: 100%;
+  height: 100%;
   }
